auto-commit for c17e12f5-4dd2-4149-a742-da5d88908680